feat: enhance inventory system, profile avatar crop, and localization
- Inventory:
  - Add type_group (tools/devices) to InventoryItem
  - Implement role-based access for Coordinators (high-value) vs Technicians (low-value)
  - Separate Tools and Devices in UI
  - Fix mixed old data handling

- Profile:
  - Implement client-side avatar cropping with Cropper.js
  - Fix avatar display in header (use storage link)
  - Fix 'Crop & Save' button functionality

- Localization:
  - Update Indonesian translations (id.json) for Inventory and Profile modules

- Deployment:
  - Add GUIDE_UPDATE_SERVER.md
  - Add deploy.sh

--- a/lang/id.json
+++ b/lang/id.json
@@ -139,5 +139,105 @@
     "Add Coordinator": "Tambah Koordinator",
     "Not Linked": "Tidak Terhubung",
     "Are you sure?": "Apakah Anda yakin?",
-    "No coordinators found.": "Tidak ada koordinator ditemukan."
+    "No coordinators found.": "Tidak ada koordinator ditemukan.",
+    "Inventory Management": "Manajemen Inventaris",
+    "Materials & Devices": "Material & Perangkat",
+    "Tools & Assets": "Alat Kerja & Aset",
+    "All Inventory Items": "Semua Item Inventaris",
+    "Add Item": "Tambah Item",
+    "Import Excel": "Impor Excel",
+    "Download Template": "Unduh Template",
+    "Export PDF": "Ekspor PDF",
+    "Export Excel": "Ekspor Excel",
+    "Pickup Item": "Ambil Barang",
+    "Stock": "Stok",
+    "Category": "Kategori",
+    "Type Group": "Kelompok Tipe",
+    "Type": "Tipe",
+    "Brand": "Merk",
+    "Model": "Model",
+    "Unit": "Satuan",
+    "Price": "Harga",
+    "Description": "Deskripsi",
+    "Material / Device (Consumable)": "Material / Perangkat (Habis Pakai)",
+    "Tool / Asset (Returnable)": "Alat / Aset (Dapat Dikembalikan)",
+    "Select \"Material\" for consumables/devices given to customers. Select \"Tool\" for equipment used by technicians.": "Pilih \"Material\" untuk barang habis pakai/perangkat pelanggan. Pilih \"Alat\" untuk peralatan teknisi.",
+    "My Assets": "Aset Saya",
+    "Asset Code": "Kode Aset",
+    "Serial Number": "Nomor Seri",
+    "Condition": "Kondisi",
+    "Good": "Baik",
+    "Damaged": "Rusak",
+    "Return": "Kembalikan",
+    "Return Asset": "Kembalikan Aset",
+    "Are you sure you want to return this asset?": "Apakah Anda yakin ingin mengembalikan aset ini?",
+    "Asset returned successfully.": "Aset berhasil dikembalikan.",
+    "Tools have been assigned to your assets.": "Alat telah ditambahkan ke aset Anda.",
+    "Items picked up successfully.": "Barang berhasil diambil.",
+    "Not enough stock available.": "Stok tidak mencukupi.",
+    "Asset created successfully.": "Aset berhasil dibuat.",
+    "Asset updated successfully.": "Aset berhasil diperbarui.",
+    "Pickup deleted and stock returned.": "Pengambilan dihapus dan stok dikembalikan.",
+    "Filter by Type Group": "Filter Berdasarkan Kelompok",
+    "Select Type Group": "Pilih Kelompok Tipe",
+    "Tools": "Alat Kerja",
+    "Materials": "Material",
+    "Search...": "Cari...",
+    "Save Changes": "Simpan Perubahan",
+    "Close": "Tutup",
+    "Update Item": "Perbarui Item",
+    "Quantity": "Jumlah",
+    "Usage": "Penggunaan",
+    "Proof Image": "Bukti Foto",
+    "New Installation": "Instalasi Baru",
+    "Replacement": "Penggantian",
+    "Maintenance": "Perbaikan",
+    "Holder": "Pemegang",
+    "Date Acquired": "Tanggal Perolehan",
+    "Date Returned": "Tanggal Pengembalian",
+    "Notes": "Catatan",
+    "No assets found.": "Tidak ada aset ditemukan.",
+    "Available": "Tersedia",
+    "Deployed": "Digunakan",
+    "Broken": "Rusak",
+    "Lost": "Hilang",
+    "These are the assets currently assigned to you. You are responsible for their condition and safety.": "Ini adalah aset yang saat ini ditugaskan kepada Anda. Anda bertanggung jawab atas kondisi dan keamanannya.",
+    "You currently have no assets assigned to you.": "Saat ini Anda tidak memiliki aset yang ditugaskan.",
+    "Active / In Use": "Aktif / Sedang Digunakan",
+    "Assignment Note": "Catatan Penugasan",
+    "Total Stock Value": "Total Nilai Stok",
+    "Total Items": "Total Item",
+    "Total Purchases": "Total Pembelian",
+    "Export/Import": "Ekspor/Impor",
+    "Add New Item": "Tambah Item Baru",
+    "All Categories": "Semua Kategori",
+    "Tools & Assets Inventory": "Inventaris Alat & Aset",
+    "Materials & Devices Inventory": "Inventaris Material & Perangkat",
+    "Back": "Kembali",
+    "Select Items": "Pilih Item",
+    "Item": "Item",
+    "Choose an item...": "Pilih item...",
+    "Select Usage...": "Pilih Penggunaan...",
+    "Coordinator": "Koordinator",
+    "Select Coordinator (Optional)": "Pilih Koordinator (Opsional)",
+    "Select the coordinator this pickup is associated with (if any).": "Pilih koordinator yang terkait dengan pengambilan ini (jika ada).",
+    "Proof of Pickup": "Bukti Pengambilan",
+    "Photo": "Foto",
+    "Upload a photo of the items taken or the signed receipt.": "Unggah foto barang yang diambil atau tanda terima yang ditandatangani.",
+    "Notes / Description": "Catatan / Deskripsi",
+    "Optional notes...": "Catatan opsional...",
+    "Submit Pickup": "Kirim Pengambilan",
+    "Manage Assets": "Kelola Aset",
+    "Back to Inventory": "Kembali ke Inventaris",
+    "Item Details": "Detail Item",
+    "Stock (Total)": "Stok (Total)",
+    "Registered Assets": "Aset Terdaftar",
+    "Register assets only for items that need individual tracking (SN, MAC). The count here does not affect total stock unless synced.": "Daftarkan aset hanya untuk item yang memerlukan pelacakan individu (SN, MAC). Jumlah di sini tidak mempengaruhi total stok kecuali disinkronkan.",
+    "Asset List": "Daftar Aset",
+    "Register New Asset": "Daftar Aset Baru",
+    "Holder / Location": "Pemegang / Lokasi",
+    "In Stock": "Tersedia",
+    "Crop Image": "Potong Gambar",
+    "Crop & Save": "Potong & Simpan",
+    "Profile Photo": "Foto Profil"
 }
